# PhysicsEngineGL

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
resources/shaders/: cube.frag  cube.vert  plane.frag  plane.vert  triangle.frag  triangle.vert
scripts/: BUILD_RUN.bat  BUILD_RUN.sh
src/: main.cpp
src/Camera/: Camera.cpp  Camera.h
src/Components/: Component.h
src/Components/Collider/: Collider.cpp  Collider.h
src/Components/RigidBody/: RigidBody.cpp  RigidBody.h
src/Components/Transform/: Transform.cpp  Transform.h
src/Logger/: Logger.h
src/Memory/: Memory.h
src/Plane/: Plane.cpp  Plane.h
src/Renderable/: Renderable.h
src/Renderer/: Renderer.h
src/Scene/: Scene.cpp  Scene.h
src/Shader/: Shader.cpp  Shader.h
src/Shapes/: Shape.h
src/Shapes/Cube/: Cube.cpp  Cube.h
src/UI/: UI.cpp  UI.h
src/UI/components/: UIElement.h
src/Utils/: Utils.cpp  Utils.h
